[gd_scene load_steps=4 format=3 uid="uid://bj886b06hho56"]

[ext_resource type="Script" path="res://scenes/intro/intro.gd" id="1_rd5e6"]
[ext_resource type="FontFile" uid="uid://c10t8b5fip0p8" path="res://assets/fonts/MinimalPixelFont.ttf" id="1_xcqns"]
[ext_resource type="AudioStream" uid="uid://bjrmlc4j4w4uy" path="res://assets/sound/game_insert.wav" id="3_yrgra"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_rd5e6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 649.0

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Story" type="RichTextLabel" parent="MarginContainer/Control"]
layout_mode = 2
offset_right = 1086.0
offset_bottom = 585.0
theme_override_fonts/normal_font = ExtResource("1_xcqns")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]The following simulation is meant to corroborate the events which occured on the twenty-first december of 2012, in memory of those that have succumbed to their grace, and in prospect of those who will. Creatures unknown were gifted to us on this unhallowed earth. Life, just like the Celestials intended it to be, replaced most of us. Those that remain's single purpose lies in sustaining them.

Sacrifice man to birth the apotheosis of being, the Celestial Aberrant.
Sacrificium.
"
scroll_active = false
shortcut_keys_enabled = false

[node name="Warning" type="RichTextLabel" parent="MarginContainer/Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 434.0
offset_right = 1089.0
offset_bottom = 1019.0
theme_override_colors/default_color = Color(0.627451, 0.478431, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_xcqns")
theme_override_font_sizes/normal_font_size = 60
bbcode_enabled = true
text = "[center]! Warning: Heavy Use of Visual Effects !"
scroll_active = false
shortcut_keys_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -61.0
offset_top = -48.0
offset_right = 7.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="PlayButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_xcqns")
theme_override_font_sizes/font_size = 60
text = "Continue"

[node name="GameInsert" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_yrgra")

[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="finished" from="GameInsert" to="." method="_on_game_insert_finished"]
